--- a/education.html
+++ b/education.html
@@ -12,13 +12,27 @@
 
 <body>
 <div id="wrapper">
-<header>
 
-<h1> Education</h1>
-</header>
+
+	<header>
+	
+	<div> <a href="index.html"> <span><strong>ABOUT ME</strong> </span></a> 
+	<a href="education.html"> <span><strong>EDUCATION </strong> </span></a>
+	<a href="projects.html"> <span><strong>PROJECTS</strong> </span></a>
+		<a href=https://s3.amazonaws.com/symp.csm.usprod/ucirvine/files/2c5/2c5d9d6d09f837ca17491e57f67ca2c3.pdf> <span><strong>RESUME</strong> </span></a></div>
+
+	
+
+
+	<!--<h1> woomy@uci.edu   <span style="color:#800000">  | </span>   (626)200-7215  <span style="color:#800000"> | </span>1348 Stanford, Irvine 92612</h1>-->
+	</header>
+
 <section class="schools">
-		<div class="content">
-		<h2> Schools~ </h2>
+	<h2> Schools~ </h2>
+		<div style="margin-left: 40px"class="content1">
+		
+
+
 		
 		<h3> University of California, Irvine </h3>
 
@@ -27,67 +41,61 @@
 			<p> Expected Graduation Year: 2019 </p>
 
 		<p> B.S Computer Science </p>
-		<p> GPA: 3.09 </p>
+		<p> GPA: 3.24 </p>
+		</div>
 
+		<div class="content2">
 
 		<h3> Sunny Hills High School </h3>
 		<p> Location: Fullerton </p>
 		<p> Graduation Year: 2016</p>
 		<p> GPA: 4.2 </p>
-
-
-
-
 		</div>
 
-	
-	</section>
-		</section>
 
-	<section class="buttonlist">
-	<div> <a href="index.html"> <span><strong>ABOUT ME</strong> </span></a> 
-	<a href="education.html"> <span><strong>EDUCATION </strong> </span></a>
-	<a href="projects.html"> <span><strong>PROJECTS</strong> </span></a>
-		<a href=https://s3.amazonaws.com/symp.csm.usprod/ucirvine/files/2c5/2c5d9d6d09f837ca17491e57f67ca2c3.pdf> <span><strong>RESUME</strong> </span></a></div>
+
+		
 
 	
 
-	
-</section>
 
 
 
 	<section class="coursework">
 	<h2 id="c"> Coursework~ </h2>
 		<div class="content1">
-		<p style="font-size: 25px; margin-left: 20px;margin-top:0px"> University Coursework: </p>
+		<h3> University Coursework: </h3>
 
-		<ul>
-		<li>Introduction To Programming (Python) </li>
-		<li>Programming with Software Libraries (Python) </li>
-		<li>Intermediate Programming (Python) </li>
-		<li> Introduction to Software Engineering</li>
-		<li>Boolean Algebra and Logic </li>
-		<li>Discrete Mathematics for Computer Science </li>
-		<li>Computer Linear Algebra </li>
-		<li> Game System and Design</li>
-		<li> Programming in C/C++</li>
-		<li>Introductory Computer Organization </li>
+		
+		<p>Introduction To Programming (Python) </p>
+		<p>Programming with Software Libraries (Python) </p>
+		<p>Intermediate Programming (Python) </p>
+		<p> Introduction to Software Engineering</p>
+		<p>Boolean Algebra and Logic </p>
+		<p>Discrete Mathematics for Computer Science </p>
+		<p>Computer Linear Algebra </p>
+		<p> Game System and Design</p>
+		<p> Programming in C/C++</p>
+		<p>Introductory Computer Organization </p>
+		<p> Data Structure Implementation and Analysis</p>
 
-		</ul>
+		
 
 		</div>
 
 		<div class="content2">
-		<p style="font-size: 25px; margin-left: 20px;margin-top:0px"> Online Coursework: </p>
+		<h3> Online Coursework: </h3>
 
-		<ul>
-		<li>Codecademy: HTML & CSS </li>
-		<li>Codecademy: Make a Website </li>
-		<li>Codecademy: JavaScript </li>
-		<li> Lynda: JavaScript Essential Training</li>
-		<li> Lynda: CSS Essential Training 1</li>
-		</ul>
+		
+		<p>Codecademy: HTML & CSS </p>
+		<p>Codecademy: Make a Website </p>
+		<p>Codecademy: JavaScript </p>
+		<p> Lynda: JavaScript Essential Training</p>
+		<p> Lynda: CSS Essential Training 1</p>
+		<p> Udemy: JavaScript: Understanding the Weird Parts (in Progress)</p>
+		<p> Udemy: The Complete Node.js Developer Course (in Progress)</p>
+		
+		
 
 		</div>
 
