--- a/index.html
+++ b/index.html
@@ -12,29 +12,7 @@
 	<body>
 	<div id="wrapper">
 	<header>
-		<img id= "profile" src="images/profile.jpg"> 
 	
-		<h1> <strong>Michelle Woo</strong> </h1>
-	</header>
-	<header id="header2">
-	<h1> woomy@uci.edu   <span style="color:#800000">  | </span>   (626)200-7215  <span style="color:#800000"> | </span>1348 Stanford, Irvine 92612</h1>
-	</header>
-
-
-	<main>
-		<section class="about">
-		<div class="content">
-		<h2> About Me~ </h2>
-
-		
-
-		<p> Hi there! My name is Michelle and I am currently a sophmore studying computer science at
-		University of California, Irvine. In my free time, I love hanging out with people, playing video games and painting. I love programming and am excited to gain more knowledge in the field of computer science. I hope to pursue a career in web development, game development, or app development </p>
-		</div>
-
-		
-	</section>
-	<section class="buttonlist">
 	<div> <a href="index.html"> <span><strong>ABOUT ME</strong> </span></a> 
 	<a href="education.html"> <span><strong>EDUCATION </strong> </span></a>
 	<a href="projects.html"> <span><strong>PROJECTS</strong> </span></a>
@@ -42,8 +20,26 @@
 
 	
 
+
+	<!--<h1> woomy@uci.edu   <span style="color:#800000">  | </span>   (626)200-7215  <span style="color:#800000"> | </span>1348 Stanford, Irvine 92612</h1>-->
+	</header>
+
+
+	<main>
+		<section class="about">
+			<img id= "profile" src="images/profile2.png"> 
+		<div class="content">
+		<h2> MICHELLE WOO</h2>
+		<h5> Front-end Developer, Gamer, Boba Addict</h5>
+			
+		<p> Hi there! My name is Michelle and I am currently a junior studying computer science at
+		University of California, Irvine. I love programming and am excited to gain more knowledge in the field of computer science. I hope to pursue a career in web development, game development, or app development. </p>
+		<p style="color:#00ccff"> Email: michelleymwoo@gmail.com </p>
+		</div>
+
+		
+	</section>
 	
-</section>
 
 <!-- Education-->
 
@@ -51,11 +47,19 @@
 
 
 <footer>
-<h2> Let's Keep in Touch! </h2>
-<a href="mailto:woomy@uci.edu?Subject=subject here&Body=bodytext"> woomy@uci.edu </a>
-<a href="https://www.facebook.com/michelle.woohoo.9"> Facebook </a>
-<a href="https://www.linkedin.com/in/michelle-woo-a71a41129/"> Linkedin </a>
+
 <div>
+	<a id="github" href="https://github.com/michellewoohoo"> 
+	<img style="padding-left:30px" src="images/network2.png" width=70px >
+	 </a>
+
+<a id="fb" href="https://www.facebook.com/michelle.woohoo.9"> 
+	<img src="images/fb2.png"width=40px>
+</a>
+
+<a id="linked" href="https://www.linkedin.com/in/michelle-woo-a71a41129/"> 
+	<img src="images/linked2.png"width=40px>
+</a>
 
 </div>
 
