--- a/education.html
+++ b/education.html
@@ -17,15 +17,42 @@
 	<header>
 	
 	<div> <a href="index.html"> <span><strong>ABOUT ME</strong> </span></a> 
-	<a href="education.html"> <span><strong>EDUCATION </strong> </span></a>
+	<a href="education.html"> <span><strong>EXPERIENCE/EDUCATION </strong> </span></a>
 	<a href="projects.html"> <span><strong>PROJECTS</strong> </span></a>
-		<a href=https://s3.amazonaws.com/symp.csm.usprod/ucirvine/files/2c5/2c5d9d6d09f837ca17491e57f67ca2c3.pdf> <span><strong>RESUME</strong> </span></a></div>
+	<a href="csresume.pdf"> <span><strong>RESUME</strong> </span></a></div>
 
 	
 
 
 	<!--<h1> woomy@uci.edu   <span style="color:#800000">  | </span>   (626)200-7215  <span style="color:#800000"> | </span>1348 Stanford, Irvine 92612</h1>-->
 	</header>
+
+
+
+
+<section class="experience">
+	<h2> Experience~ </h2>
+	<h3> Super Toy Box </h3>
+	<h5> <i>Software Developer Intern </i></h5>
+	<ul>
+	<li> Used Unity/C#, PlayCanvas, and A-Frame to create virtual reality components</li>
+	<li> Updated Blizzard assets and added sound to the BLIZZWAYIW project for Blizzcon</li>
+	<li> Fixed bugs and errors of the templates that were uploaded into the VRFactory website</li>
+
+	</ul>
+
+	<h3> Dating Sphere </h3>
+	<h5> <i>Beta Tester Intern </i></h5>
+	<ul>
+	<li>Tested for bugs and errors in the website before launch</li>
+	<li>Submitted bug reports and proposed improvements for website</li>
+
+
+	</ul>
+	
+</section>
+
+
 
 <section class="schools">
 	<h2> Schools~ </h2>
@@ -48,7 +75,7 @@
 
 		<h3> Sunny Hills High School </h3>
 		<p> Location: Fullerton </p>
-		<p> Graduation Year: 2016</p>
+		<p> Graduation Year: 2015</p>
 		<p> GPA: 4.2 </p>
 		</div>
 
