--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<header>
 	
 	<div> <a href="index.html"> <span><strong>ABOUT ME</strong> </span></a> 
-	<a href="education.html"> <span><strong>EDUCATION </strong> </span></a>
+	<a href="education.html"> <span><strong>EXPERIENCE/EDUCATION </strong> </span></a>
 	<a href="projects.html"> <span><strong>PROJECTS</strong> </span></a>
-		<a href=https://s3.amazonaws.com/symp.csm.usprod/ucirvine/files/2c5/2c5d9d6d09f837ca17491e57f67ca2c3.pdf> <span><strong>RESUME</strong> </span></a></div>
+	<a href="csresume.pdf"> <span><strong>RESUME</strong> </span></a></div>
 
 	
 
