--- a/projects.html
+++ b/projects.html
@@ -14,47 +14,68 @@
 <div id="wrapper">
 <header>
 <div> <a href="index.html"> <span><strong>ABOUT ME</strong> </span></a> 
-	<a href="education.html"> <span><strong>EDUCATION </strong> </span></a>
+	<a href="education.html"> <span><strong>EXPERIENCE/EDUCATION </strong> </span></a>
 	<a href="projects.html"> <span><strong>PROJECTS</strong> </span></a>
-		<a href=https://s3.amazonaws.com/symp.csm.usprod/ucirvine/files/2c5/2c5d9d6d09f837ca17491e57f67ca2c3.pdf> <span><strong>RESUME</strong> </span></a></div>
+		<a href="csresume.pdf"> <span><strong>RESUME</strong> </span></a></div>
 
 	
 </header>
 <section class="projects">
 
+
+
 		<div class="content">
-		<h3> Maze Generator (C++)</h3>
-		<img id= "maze" src="images/maze.jpg"> 
+			
+		<h3> Class Grade/Final Score Calculator Website (HTML, CSS, JavaScript) </h3>
+
+		<div id="gradecalc" class= "projectimg">
+		</div>
+		<!--<img id="gradecalc" src="images/gradetitle.png"> 
+		<img id="gradecalcgroup" src="images/graderesult.png">-->
+		<p> This website asks the user to input information about their class
+		(weights, total points, and their scores). It calculates and displays
+		their total percentage in the class. The user can also choose to calculate
+		what score they need to get on the final to get a specific grade in the class. </p>
+
+		<a href="http://finalgradescorecalculator.bitballoon.com/"> Go to the website! </a>
+
+		<h3> Maze Generator/Solver (C++)</h3>
+
+		
+		 <img id= "maze" src="images/maze.jpg"> 
 		<p>The program generates an infinite amount of random mazes given any width from 10-50 cells wide and height from 10-50 cells tall. It also has the ability to solve any maze and acknowledges whether the maze has a solution.</p>
+		<a href="https://github.com/michellewoohoo/MazeGenerator"> Maze Generator/Solver Code </a>
+	
+		
+		
 		<h3> Text Editor (C++) </h3>
 		<img id= "textedit" src="images/textedit.jpg"> 
 		<p> This text editor can display the cursor and text, move the cursor around with key presses, delete text, and undo/redo keypresses and text changes.</p>
+		<a href="https://github.com/michellewoohoo/TextEditor"> TextEditor Code </a>
 
-		<h3> Othello (Python) </h3>
-		<img id= "othellomenu" src="images/othellomenu.jpg"> 
+		<h3> Othello (Python/ C++) </h3>
 		<img id= "othello" src="images/othello.jpg"> 
 		<p> The program runs a fully functional Othello game. The program asks the
-		user for specifications for the game (rows, columns, which player goes first,etc.). The game logic and GUI were written from scratch. **I am currently programming the AI in C++.</p>
+		user for specifications for the game (rows, columns, which player goes first,etc.). The game logic, GUI, and Artificial Intelligence were written from scratch. </p>
+		<a href="https://github.com/michellewoohoo/PythonOthello"> Othello Game Logic Code (Python) </a>
+		<a href="https://github.com/michellewoohoo/OthelloAI"> Othello AI Code (C++)</a>
+
+
 
 		<h3> Spending Tracker (Python) </h3>
-		<img id="spendtrack" src="images/spendtrack.jpg">
-		<img id="overspendtrack" src="images/overspendtrack.jpg">
-		<p> This program helps people set a budget and track their spending. If identified as a new user, a menu pops up, asking the person how much he or she wants to spend a day. If identified as a returning user, it already knows how much he or she wants to spend per day and it displays how much money the person has left. The user can open and close the application and keep inputting how much he or she spends that day and the program will constantly update itself. When it is a new day, the “money left to spend” will set itself back to the daily budget.  </p>
-
-		<h3> Troll Cat Mario (GameSalad)</h3>
-		<img id="catmario" src="images/catmario.jpg">
-		<p> This is my first video game I created in high school. The game is like the classic Mario game except there are many more booby traps. The purpose of the game is to make people rage quit. </p>
-		<a href= "http://arcade.gamesalad.com/games/127334"> Click here to play it! </a>
-
-		<h3> Class Grade Calculator Website-In Progress (HTML, CSS, JavaScript) </h3>
-		<img id="gradecalc" src="images/gradecalc.jpg"> 
-		<img id="gradecalcgroup" src="images/gradecalcgroup.jpg">
-		<p> This website asks the user to input information about their class
-		(number of weightings, points, their scores). It calculates and displays
-		their total percentage in the class. </p>
-
-
+		<div id="spendtrack" class= "projectimg">
 		</div>
+		<!--<img id="spendtrack" src="images/spendtrack.jpg">
+		<img id="overspendtrack" src="images/overspendtrack.jpg">-->
+		<p> This program helps people set a budget and track their spending. If identified as a new user, a menu pops up, asking the person how much he or she wants to spend a day. If identified as a returning user, it already knows how much he or she wants to spend per day and it displays how much money the person has left. The user can open and close the application and keep inputting how much he or she spends that day and the program will constantly update itself. When it is a new day, the “money left to spend” will set itself back to the daily budget.  </p>
+		<a href=https://github.com/michellewoohoo/Spending-Tracker> Spending Tracker Code </a>
+		
+		<h3> Troll Cat Mario (GameSalad)</h3>
+		<div id="catmario" class= "projectimg"> </div>
+		<p> This is my first video game I created in high school. The game is like the classic Mario game except there are many more booby traps. The purpose of the game is to make people rage quit. </p>
+		<a href="http://arcade.gamesalad.com/games/127334"> Play the game! </a>
+
+		
 		</section>
 
 		
