biorobotics website updated-about

--- a/biorobotics/about.html
+++ b/biorobotics/about.html
@@ -42,6 +42,7 @@
 <div class="content" >
     <div style="padding-bottom:20px">
 <h3>Lab Overview: </h3>
+<img style="height:150px; width:250px; float:right; padding-left:20px" src="images/lab.jpg">
 <p>Our group develops robotic and mechatronic devices that enhance 
 human movement, motor learning, and rehabilitation. Many of these devices
 are exoskeletons that attach to the arms or legs of people with a stroke 
@@ -57,6 +58,9 @@ plasticity.</p>
     </div>
 
      <div>
+
+<img style="height:150px; width:250px; float:left; padding-right:20px" src="images/gateway.jpg">
+<div style="padding-left:20px">
 <h3>Our Location and Collaborators: </h3>
 <p>We are a research laboratory in the <a href="http://engineering.uci.edu/dept/mae">Department of Mechanical and
 Aerospace Engineering </a> and <a href="http://anatomy.uci.edu/">Department of Anatomy and Neurobiology </a>. We 
@@ -64,10 +68,11 @@ are affiliated with the <a href="http://engineering.uci.edu/dept/bme">Department
 Research Center for Spinal Cord Injury Research, the <a href="http://www.calit2.net/index.php">California Institute 
 for Telecommunications and and Information Technology (Calit2)</a>, and the 
 <a href="http://www.icts.uci.edu/">Institute for Clinical and Translational Science</a> at U.C. Irvine.</p>
+</div>   
     </div>
-
-
          <div>
+
+<img style="height:150px; width:250px; float:right; padding-left:20px" src="images/people.jpg">         
 <h3>Greater Mission: </h3>
 <p>As part of the the Henry Samueli School of Engineering, we share 
 the greater mission of the School, which is to educate students, at 
