changed theme and updated publications

--- a/biorobotics/directions.html
+++ b/biorobotics/directions.html
@@ -22,7 +22,7 @@
 	</div>
     <div class="dropdown">
         
-        <a class="dropbtn"> <span><strong>Research &#11163;</strong> </span></a>
+        <a class="dropbtn" href="research.html"> <span><strong>Research &#11163;</strong> </span></a>
         <div class="dropdown-content">
             <a href="research.html"> Technology for Arm Training </a>
             <a href="research.html"> Technology for Locomotor Training </a>
@@ -83,7 +83,7 @@
 </div>
 </div>
 <footer>
-<pre style="font-family:Times New Romans; color:grey">
+<pre style="font-family:Times New Romans; color:#C8C8C8">
 Biorobotics Laboratory
 Department of Mechanical and Aerospace Engineering
 University of California, Irvine
