--- a/biorobotics/home.html
+++ b/biorobotics/home.html
@@ -22,7 +22,7 @@
 	</div>
     <div class="dropdown">
         
-        <a class="dropbtn"> <span><strong>Research &#11163;</strong> </span></a>
+        <a class="dropbtn" href="research.html"> <span><strong>Research &#11163;</strong> </span></a>
         <div class="dropdown-content">
             <a href="research.html"> Technology for Arm Training </a>
             <a href="research.html"> Technology for Locomotor Training </a>
@@ -39,15 +39,17 @@
     </div>
 </header>
 
+    <div style="background:#000040">
 <h1 style="font-size:45px; text-align:center">Welcome to the Biorobotics Laboratory</h1>
 <div class="slideshow">
     <img id="mainimg" src= "images/wat.jpg">
     <!--<a class="prev" onclick="changeImage(-1,1)">&#10094;</a>
   <a class="next" onclick="changeImage(1,1)">&#10095;</a>-->
 </div>
+    </div>
   
 
-<h3 style="text-align: center; color:grey; padding-bottom:20px">The Biorobotics Laboratory at the University of California, 
+<h3 style="text-align: center; color:white; padding-bottom:20px">The Biorobotics Laboratory at the University of California, 
     Irvine develops robotic and mechatronic devices that enhance
      human movement, motor learning, and rehabilitation.</h3>
 </div>
@@ -59,7 +61,7 @@
 
 
 <footer>
-<pre style="font-family:Times New Romans; color:grey">
+<pre style="font-family:Times New Romans; color:#C8C8C8">
 Biorobotics Laboratory
 Department of Mechanical and Aerospace Engineering
 University of California, Irvine
