--- a/biorobotics/research.html
+++ b/biorobotics/research.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title> Additional Resources </title>
+	<title> Research </title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 
@@ -13,7 +13,7 @@
 	
 	<div> 
     <a href="home.html"> <span><strong>Home</strong> </span></a> 
-	<a href="about.html"> <span><strong>About Us </strong> </span></a>
+	<a href="about.html" > <span><strong>About Us </strong> </span></a>
 	<div class="dropdown">
         <a class="dropbtn">  <span><strong> People &#11163;</strong></span></a>
         <div class ="dropdown-content">
@@ -22,7 +22,7 @@
 	</div>
     <div class="dropdown">
         
-        <a class="dropbtn" href="research.html"> <span><strong>Research &#11163;</strong> </span></a>
+        <a class="dropbtn selected" href="research.html"> <span><strong>Research &#11163;</strong> </span></a>
         <div class="dropdown-content">
             <a href="research.html"> Technology for Arm Training </a>
             <a href="research.html"> Technology for Locomotor Training </a>
@@ -32,47 +32,28 @@
 
     <a href="videos.html"> <span><strong>Videos</strong> </span></a> 
 	<a href="publications.html"> <span><strong>Publications </strong> </span></a>
-	<a href="additresource.html" class="selected"> <span><strong>Additional Resources</strong> </span></a>
+	<a href="additresource.html"> <span><strong>Additional Resources</strong> </span></a>
 	<a href="directions.html"> <span><strong>Directions</strong> </span></a>
      <a href="contact.html"> <span><strong>Contact Us</strong> </span></a> 
 	<a href="login.html"> <span><strong>Log In </strong> </span></a>
     </div>
 </header>
-
-<h1 style="font-size:45px; text-align:center">Additional Resources</h1>
-  
-
+<h1 style="font-size:45px; text-align:center">Research</h1>
 <div class="content" >
     <div style="padding-bottom:20px">
-<h3>General Links</h3>
-    <a href="https://uci.edu/">University of California, Irvine</a><br/>
-    <a href="http://engineering.uci.edu/dept/mae"> U.C. Irvine, Mechanical and Aerospace Engineering</a>
 
-<h3>Housing Information</h3>
-
-<p>The school has a few listing services for finding on-campus and off-campus sublets. Here are some links:</p>
-
-<p>The UCI Student Housing page is: <a href="http://www.housing.uci.edu/">http://www.housing.uci.edu/</p>
-
-<!--Note: Updated link because old link from website is broken-->
-<a href="https://housing.uci.edu/apply/Summer.html"> Summer Housing </a> <br/> 
-<a href="https://offcampus.housing.uci.edu/"> Off Campus Housing</a> <br/> 
-<!--Note: Updated link because old link from website is broken-->
-<a href="http://www.accounting.uci.edu/travel/resources/hotels.html"> Hotel UCI </a>    
-
-<p> On <a href="https://orangecounty.craigslist.org/">http://www.craigslist.com</a>, under the section temporary housing,
-     are several options, including one for UCI students, who rent out 
-     their apartments during summer. See: <a href="https://orangecounty.craigslist.org/search/sub">http://orangecounty.craigslist.org/sub/</a> </p>   
-
-<p>Additional websites for finding apartments include:</p>
-<a href="https://www.abodo.com/"> My Apartment Map</a><br/>
-<a href="https://www.apartmentlist.com/"> Apartment List</a>
+    </div>
+         <div>
 
 
-</div>
+<p>Projects at the Biorobotics Laboratory focus on developing 
+    technology that people with a disability can use to improve 
+    their movement ability through repetitive training and exercise.
+    We also study neuro-computational mechanisms of motor learning, 
+    in order to inform our device designs.</p>
 
- 
-
+<p> Read more about our progress in developing:</p>
+    </div>
 
 
 
@@ -92,8 +73,5 @@ Site created by
 © ALL RIGHTS RESERVED
 </pre>
 </footer>
-
-
 </body>
-<script src="script.js"></script>
 </html>
