changed home page default img

--- a/biorobotics/home.html
+++ b/biorobotics/home.html
@@ -42,7 +42,7 @@
     <div style="background:#000040">
 <h1 style="font-size:45px; text-align:center">Welcome to the Biorobotics Laboratory</h1>
 <div class="slideshow">
-    <img id="mainimg" src= "images/wat.jpg">
+    <img id="mainimg" src= "slideshow/lab.jpg">
     <!--<a class="prev" onclick="changeImage(-1,1)">&#10094;</a>
   <a class="next" onclick="changeImage(1,1)">&#10095;</a>-->
 </div>
