Changed resume website theme

--- a/education.html
+++ b/education.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title> Education </title>
-	<link rel="stylesheet" href="css/sheet.css" type="text/css"> 
+	<title> Education and Experience </title>
 
+	<link rel="stylesheet" href="css/style.css" type="text/css"> 
 
-</head>
+	</head>
 
-<body>
-<div id="wrapper">
+	<body>
+		<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
-
+	<div id="wrapper">
 	<header>
 	
-	<div> <a href="index.html"> <span><strong>ABOUT ME</strong> </span></a> 
-	<a href="education.html"> <span><strong>EXPERIENCE/EDUCATION </strong> </span></a>
+	<div>
+	<a id="cursive">Michelle Woo</a>	
+	 <a href="home.html"> <span><strong>ABOUT ME</strong> </span></a> 
+	<a class="selected" href="education.html "> <span><strong>&#10147;EXPERIENCE/EDUCATION </strong> </span></a>
 	<a href="projects.html"> <span><strong>PROJECTS</strong> </span></a>
 	<a href="csresume.pdf"> <span><strong>RESUME</strong> </span></a></div>
 
 	
-
-
-	<!--<h1> woomy@uci.edu   <span style="color:#800000">  | </span>   (626)200-7215  <span style="color:#800000"> | </span>1348 Stanford, Irvine 92612</h1>-->
 	</header>
 
 
-
-
-<section class="experience">
-	<h2> Experience~ </h2>
-	<h3> Super Toy Box </h3>
-	<h5> <i>Software Developer Intern </i></h5>
+	<main>
+        <div style="padding-bottom:20px">
+		<section class="about">
+		
+		<h3 class="edheaders" > ~Experience~ </h3>
+       
+            <img style="display:inline-block;padding-left:40px;width:300px;height:230px"src="images/stb.png">
+	 <div style="display:inline-block;padding-left:40px;padding-bottom:50px;color:#505050" >
+         <h3> Super Toy Box </h3>
+	<h6 style="font-size:15px; margin:0; color:#4e89a4"> <i>Software Developer Intern </i></h6>
 	<ul>
 	<li> Used Unity/C#, PlayCanvas, and A-Frame to create virtual reality components</li>
 	<li> Updated Blizzard assets and added sound to the BLIZZWAYIW project for Blizzcon</li>
@@ -42,26 +44,20 @@
 	</ul>
 
 	<h3> Dating Sphere </h3>
-	<h5> <i>Beta Tester Intern </i></h5>
+	<h6 style="font-size:15px; margin:0; color:#4e89a4"> <i>Beta Tester Intern </i></h6>
 	<ul>
 	<li>Tested for bugs and errors in the website before launch</li>
 	<li>Submitted bug reports and proposed improvements for website</li>
-
-
-	</ul>
-	
-</section>
-
-
-
-<section class="schools">
-	<h2> Schools~ </h2>
-		<div style="margin-left: 40px"class="content1">
-		
-
-
-		
-		<h3> University of California, Irvine </h3>
+	</ul>	
+        </div>
+	</div>
+	</section>
+    <div style="height:400px;padding-bottom:10px">
+    <section style="margin:0;height:450px" class="about">
+	<h3 style="text-align:left;padding-left:40px"class="edheaders"> ~Education~ </h3>
+    <div style="padding-top:40px;color:#505050;">
+		<div class="schcontent ">
+		<h3 style="color:#4e89a4"> University of California, Irvine </h3>
 
 		<p> Location: Irvine </p>
 
@@ -71,66 +67,48 @@
 		<p> GPA: 3.24 </p>
 		</div>
 
-		<div class="content2">
+		<div class="schcontent ">
 
-		<h3> Sunny Hills High School </h3>
+		<h3 style="color:#4e89a4"> Sunny Hills High School </h3>
 		<p> Location: Fullerton </p>
 		<p> Graduation Year: 2015</p>
 		<p> GPA: 4.2 </p>
 		</div>
-
-
-
+		<img style="display:inline; width:500px;position:relative; left:400px;bottom:210px" src="images/uci.png">
+		<!--<img style="display:inline;width:200px; height:200px;position:relative; left:450px; bottom:230px" src="images/SH.jpg">-->
+	</div>
+    </section>
+    </div>
+	<div style="padding-top:70px">
+	<section class="about">
+	<h3 class="edheaders"> ~Skills~ </h3>
+	<div style="text-align:center;;padding-bottom:30px;padding-top:20px;color:#505050;">
 		
-
-	
-
-
-
-
-	<section class="coursework">
-	<h2 id="c"> Coursework~ </h2>
-		<div class="content1">
-		<h3> University Coursework: </h3>
-
+		<p>Working knowledge in HTML, CSS , JavaScript, PlayCanvas, Python, and C++</p>
+		<p>Basic knowledge in Unity/C# and A-Frame</p>
+		<p>Computer literate in both Windows and Apple operating systems</p>
 		
-		<p>Introduction To Programming (Python) </p>
-		<p>Programming with Software Libraries (Python) </p>
-		<p>Intermediate Programming (Python) </p>
-		<p> Introduction to Software Engineering</p>
-		<p>Boolean Algebra and Logic </p>
-		<p>Discrete Mathematics for Computer Science </p>
-		<p>Computer Linear Algebra </p>
-		<p> Game System and Design</p>
-		<p> Programming in C/C++</p>
-		<p>Introductory Computer Organization </p>
-		<p> Data Structure Implementation and Analysis</p>
-
-		
-
-		</div>
-
-		<div class="content2">
-		<h3> Online Coursework: </h3>
-
-		
-		<p>Codecademy: HTML & CSS </p>
-		<p>Codecademy: Make a Website </p>
-		<p>Codecademy: JavaScript </p>
-		<p> Lynda: JavaScript Essential Training</p>
-		<p> Lynda: CSS Essential Training 1</p>
-		<p> Udemy: JavaScript: Understanding the Weird Parts (in Progress)</p>
-		<p> Udemy: The Complete Node.js Developer Course (in Progress)</p>
-		
-		
-
-		</div>
-
+	</div>
+	<img style="display: block;
+    margin: auto;width:300px; height:200px"src="images/javascript.png">
+	</section>
 		
 
 
+</main>
+
+
+<footer style="	text-align: center;">
+
+<pre style="padding-top:20px;color:grey; font-size:10px"> 
+Site created by 
+<span style="color: #0D3D76"><a style="text-decoration: none">Michelle Woo</a></span>
+© ALL RIGHTS RESERVED
+</pre>
+</footer>
+
+</footer>
 </div>
-
 </body>
-
 </html>
+
