--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
 				<a id="linked" href="https://www.linkedin.com/in/michelle-woo-a71a41129/"> 
 				<img style="width:50px; height: 50px" src="images/linkedin.png">
 				</a>
-				<a id="deviant" > 
+				<a id="deviant" href="https://michellewoohoo.deviantart.com/" > 
 				<img style="width:59px; height: 59px" src="images/deviantart.png">
 				</a>
 				
