--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 
 	<main>
 		<section class="about">
-		<h2> Michelle&#160; Y.&#160; Woo</h2>
+		<h2 style="color:red"> Michelle&#160; Y.&#160; Woo</h2>
 		<h5> Undergraduate, Front-end Developer, Artist </h5>
 	
 		<div class="content">		
