changed main file

--- a/education.html
+++ b/education.html
@@ -17,7 +17,7 @@
 	
 	<div>
 	<a id="cursive">Michelle Woo</a>	
-	 <a href="home.html"> <span><strong>ABOUT ME</strong> </span></a> 
+	 <a href="index.html"> <span><strong>ABOUT ME</strong> </span></a> 
 	<a class="selected" href="education.html "> <span><strong>&#10147;EXPERIENCE/EDUCATION </strong> </span></a>
 	<a href="projects.html"> <span><strong>PROJECTS</strong> </span></a>
 	<a href="csresume.pdf"> <span><strong>RESUME</strong> </span></a></div>
