--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 	<div>
 	<a id="cursive">Michelle Woo</a>	
-	 <a href="home.html" class="selected"> <span><strong>&#10147;ABOUT ME</strong> </span></a> 
+	 <a href="index.html" class="selected"> <span><strong>&#10147;ABOUT ME</strong> </span></a> 
 	<a href="education.html"> <span><strong>EXPERIENCE/EDUCATION </strong> </span></a>
 	<a href="projects.html"> <span><strong>PROJECTS</strong> </span></a>
 	<a href="csresume.pdf"> <span><strong>RESUME</strong> </span></a></div>
@@ -28,7 +28,7 @@
 
 	<main>
 		<section class="about">
-		<h2 style="color:red"> Michelle&#160; Y.&#160; Woo</h2>
+		<h2> Michelle&#160; Y.&#160; Woo</h2>
 		<h5> Undergraduate, Front-end Developer, Artist </h5>
 	
 		<div class="content">		
