--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
 	
 	<div>
 	<a id="cursive">Michelle Woo</a>	
-	 <a href="home.html" > <span><strong>ABOUT ME</strong> </span></a> 
+	 <a href="index.html" > <span><strong>ABOUT ME</strong> </span></a> 
 	<a href="education.html"> <span><strong>EXPERIENCE/EDUCATION </strong> </span></a>
 	<a href="projects.html" class="selected"> <span><strong>&#10147;PROJECTS</strong> </span></a>
 	<a href="csresume.pdf"> <span><strong>RESUME</strong> </span></a></div>
