Added projects tab

--- a/projects.html
+++ b/projects.html
@@ -28,8 +28,59 @@
 
 	<main>
 		<section class="about">
-		<img style="position:relative; margin:0; right:120px"src=images/construction.jpg>
-		
+			<h1 style="color:#505050; padding-left:160px;display:inline-block"> Projects </h1>
+			<div class="w3-container">
+  
+</div>
+
+<div class="w3-content w3-display-container">
+<div style="height:400px"class="w3-display-container mySlides">
+  <div id="overlay">
+  <img id="mainimg" src="slideshow/biorobotics.png" style="position:relative;left:250px;display:inline-block;margin:auto;width:50%">
+  <div id="descrip">UCI Biorobotics Engineering Website </div>
+  </div>
+  <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
+ 
+  </div>
+</div>
+
+
+
+<button style="position:relative;left:200px;bottom:300px;float:left"class="w3-button w3-display-left w3-black" onclick="prevSlides()">&#10094;</button>
+<button style="position:relative;right:200px;bottom:305px;float:right"class="w3-button w3-display-right w3-black" onclick="nextSlides()">&#10095;</button>
+
+</div>
+
+<div id="projectdescrip">
+<h4>Class Grade/Final Score Calculator Website (HTML, CSS, JavaScript):</h4>
+<p> This website asks the user to input information about their class
+		(weights, total points, and their scores). It calculates and displays
+		their total percentage in the class. The user can also choose to calculate
+		what score they need to get on the final to get a specific grade in the class. </p>
+<a href="http://finalgradescorecalculator.bitballoon.com/"> Go to the website! </a>
+
+<h4> Text Editor (C++): </h4>
+<p> This text editor can display the cursor and text, move the cursor around with key presses, delete text, and undo/redo keypresses and text changes.</p>
+<a href="https://github.com/michellewoohoo/TextEditor"> TextEditor Code </a>
+
+<h4> Maze Generator/Solver (C++):</h4>
+<p>The program generates an infinite amount of random mazes given any width from 10-50 cells wide and height from 10-50 cells tall. It also has the ability to solve any maze and acknowledges whether the maze has a solution.</p>
+		<a href="https://github.com/michellewoohoo/MazeGenerator"> Maze Generator/Solver Code </a>
+<h4> Othello (Python/ C++): </h4>
+<p> The program runs a fully functional Othello game. The program asks the
+		user for specifications for the game (rows, columns, which player goes first,etc.). The game logic, GUI, and Artificial Intelligence were written from scratch. </p>
+		<a href="https://github.com/michellewoohoo/PythonOthello"> Othello Game Logic Code (Python) </a><br>
+		<a href="https://github.com/michellewoohoo/OthelloAI"> Othello AI Code (C++)</a>
+
+<h4> Spending Tracker (Python): </h4>
+<p> This program helps people set a budget and track their spending. If identified as a new user, a menu pops up, asking the person how much he or she wants to spend a day. If identified as a returning user, it already knows how much he or she wants to spend per day and it displays how much money the person has left. The user can open and close the application and keep inputting how much he or she spends that day and the program will constantly update itself. When it is a new day, the “money left to spend” will set itself back to the daily budget.  </p>
+		<a href=https://github.com/michellewoohoo/Spending-Tracker> Spending Tracker Code </a>
+
+<h4> Cat Mario (GameSalad):</h4>
+		<p> This is my first video game I created in high school. The game is like the classic Mario game except there are many more booby traps. The purpose of the game is to make people rage quit. </p>
+		<a href="http://arcade.gamesalad.com/games/127334"> Play the game! </a>
+
+</div>
 
 		
 	</section>
@@ -52,6 +103,7 @@ Site created by
 </footer>
 </div>
 </body>
+<script src="script.js"></script>
 </html>
 
 
