--- a/education.html
+++ b/education.html
@@ -37,8 +37,9 @@
          <h3> Super Toy Box </h3>
 	<h6 style="font-size:15px; margin:0; color:#4e89a4"> <i>Software Developer Intern </i></h6>
 	<ul>
+	<li> Replaced assets and converted XML files to JSON files for applications</li>
+	<li> Styled footer and product features/details of the Aggregate Watches website</li>
 	<li> Used Unity/C#, PlayCanvas, and A-Frame to create virtual reality components</li>
-	<li> Updated Blizzard assets and added sound to the BLIZZWAYIW project for Blizzcon</li>
 	<li> Fixed bugs and errors of the templates that were uploaded into the VRFactory website</li>
 
 	</ul>
@@ -82,10 +83,10 @@
 	<div style="padding-top:70px">
 	<section class="about">
 	<h3 class="edheaders"> ~Skills~ </h3>
-	<div style="text-align:center;;padding-bottom:30px;padding-top:20px;color:#505050;">
+	<div style="text-align:center;;padding-bottom:30px;padding-top:20px;padding-right:20px;color:#505050;">
 		
-		<p>Working knowledge in HTML, CSS , JavaScript, PlayCanvas, Python, and C++</p>
-		<p>Basic knowledge in Unity/C# and A-Frame</p>
+		<p>Working knowledge in in HTML, CSS , JavaScript, PlayCanvas, Python, C++ , Unity/C#, and GitHub</p>
+		<p>Basic knowledge in A-Frame, Bootstrap, ARKit, and Vuforia</p>
 		<p>Computer literate in both Windows and Apple operating systems</p>
 		
 	</div>
