--- a/projects.html
+++ b/projects.html
@@ -36,8 +36,8 @@
 <div class="w3-content w3-display-container">
 <div style="height:400px"class="w3-display-container mySlides">
   <div id="overlay">
-  <img id="mainimg" src="slideshow/biorobotics.png" style="position:relative;left:250px;display:inline-block;margin:auto;width:50%">
-  <div id="descrip">UCI Biorobotics Engineering Website </div>
+  <img id="mainimg" src="slideshow/medapp.png" style="position:relative;left:250px;display:inline-block;margin:auto;width:50%">
+  <div id="descrip">AR MedKit App </div>
   </div>
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
  
@@ -52,6 +52,28 @@
 </div>
 
 <div id="projectdescrip">
+<h4>1ST PLACE WINNER- Augmented Reality First Aid Android Application (Unity/C#, Vuforia, ARCore):</h4>
+<p> The Android application uses augmented reality to simulate different injuries and demonstrate how to care for those injuries.
+There are interactive AR components with step by step instructions for users to learn effectively. 
+This project was created with a group at UCI's ICSSC's 2 week Medical Application Jam.
+</p>
+
+<h4>UCI Biorobotics Engineering Laboratory Website (HTML, CSS, JavaScript) -In Progress:</h4>
+<p> In the process of creating a website for UCI’s biorobotics lab to show what they do and display their projects. 
+The website includes a slide show of pictures of their lab, information about the professors and students, and a map of where the lab is located using Google Maps API
+		
+		
+</p>
+
+<h4>FitYourGenes (HTML, CSS, Python, NodeJS, Bootstrap):</h4>
+<p> This web application uses Genome Link API and Flask to output genomic data. It utilizes genomic data to determine which diseases users are susceptible to, 
+	what nutritional deficiencies users have, and the body type of each user. 
+The application returns information and personalizes foods, nutrients and exercises suggested for each individual.
+I competed with a group at UC San Diego’s hackathon for 36 hours, and was a front-end developer.
+		
+</p>
+
+
 <h4>Class Grade/Final Score Calculator Website (HTML, CSS, JavaScript):</h4>
 <p> This website asks the user to input information about their class
 		(weights, total points, and their scores). It calculates and displays
