--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> About Me </title>
-
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="css/style.css" type="text/css"> 
-
+	<!-- <link rel="stylesheet" href="http://cdn.jsdelivr.net/animatecss/2.1.0/animate.min.css"> -->
 	</head>
 
 	<body>
@@ -78,6 +78,7 @@ Site created by
 
 </footer>
 </div>
+
 </body>
 </html>
 
