--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/animatecss/2.1.0/animate.min.css">
     </head>
     <body>
-        <a href="home.html"><img id="home" src="images/home.png"></a>
+        <a href="index.html"><img id="home" src="images/home.png"></a>
 
     <div class="wrapper">
             <header class="pull-left animated fadeInLeft" id="tabsbar">
