--- a/education.html
+++ b/education.html
@@ -3,6 +3,11 @@
     <head>
     <meta charset="UTF-8">
     <title>Education and Skills</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    
+        <!-- Bootstrap Dropdown Hover CSS -->
+        <link href="css/animate.min.css" rel="stylesheet">
+        <link href="css/bootstrap-dropdownhover.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/general.css" type="text/css"> 
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/animatecss/2.1.0/animate.min.css">
