--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
     <head>
     <meta charset="UTF-8">
-    <title>Welcome to my Site</title>
+    <title>KEKEK</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    
+        <!-- Bootstrap Dropdown Hover CSS -->
+        <link href="css/animate.min.css" rel="stylesheet">
+        <link href="css/bootstrap-dropdownhover.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" type="text/css"> 
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/animatecss/2.1.0/animate.min.css">
