--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <meta charset="UTF-8">
-    <title>KEKEK</title>
+    <title>Welcome to My Site!</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     
         <!-- Bootstrap Dropdown Hover CSS -->
