--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
     <head>
     <meta charset="UTF-8">
     <title>KEKE</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+   
     
-        <!-- Bootstrap Dropdown Hover CSS -->
-        <link href="css/animate.min.css" rel="stylesheet">
-        <link href="css/bootstrap-dropdownhover.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css" type="text/css"> 
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/animatecss/2.1.0/animate.min.css">
