--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <meta charset="UTF-8">
-    <title>L</title>
+    <title>Welcome to my Site!</title>
    
     
     <link rel="stylesheet"
@@ -58,7 +58,7 @@
     </div>
     <div class="pull-right animated fadeInRight" id="tile1">
                 <div id="mainDiv"> <div id="borderLeft" style="height:100%"><a href="experience.html"><img id="experience" src="images/experienceIcon.png" onmouseover="this.src='images/experienceIconwhite.png'" onmouseout="this.src='images/experienceIcon.png'"></a></div></div>
-                <div id="mainDiv"><div id="borderLeft" style="height:100%"><a href="education.html"><img id="education" src="images/educationIcon.png" onmouseover="this.src='images/educationIconwhite.png'" onmouseout="this.src='images/educationIcon.png'"></a></div></div>
+                <div id="mainDiv"><div id="borderLeft" style="height:100%"><a href="education.html"><img id="education" src="images/educationIcon.png" onmouseover="this.src='images/educationIconWhite.png'" onmouseout="this.src='images/educationIcon.png'"></a></div></div>
                 <div id="bottomLDiv"> <a href="artwork.html"><img id "art" src="images/artIcon.png" onmouseover="this.src='images/artIconwhite.png'" onmouseout="this.src='images/artIcon.png'"></a></div>
     </div> 
     </div>
