--- a/artwork.html
+++ b/artwork.html
@@ -31,6 +31,7 @@
             <img  src="images/artwork/cactus.jpg">
             <img  src="images/artwork/mini.jpg">
             <img  src="images/artwork/ne.jpg">
+            <img  src="images/artwork/beach.jpg">
             <img  src="images/artwork/lake.jpg">
             <img  src="images/artwork/boat.jpg">
             
