--- a/experience.html
+++ b/experience.html
@@ -38,7 +38,7 @@
             </p>
 
             <ul style="  font-size: 2vw ">
-                    <li> Replaced assets and converted XML files to JSON files for applications</li>
+                    <li> Replaced assets and converted XML files to JSON files for Subaru and Kia Awards display application</li>
                     <li> Styled footer and product features/details of the Aggregate Watches website</li>
                     <li> Used Unity/C#, PlayCanvas, and A-Frame to create virtual reality components</li>
                     <li> Fixed bugs and errors of the templates that were uploaded into the VRFactory website</li>
